--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "http-server -p 5000"
+    "start": "http-server -p $PORT"
   },
   "author": "",
   "license": "ISC",
